--- a/robot/pom.xml
+++ b/robot/pom.xml
@@ -40,5 +40,10 @@
             <artifactId>utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>cn.rookiex</groupId>
+            <artifactId>message</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
