新增消息编解码

--- a/message/pom.xml
+++ b/message/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>message</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.11.4</version>
+        </dependency>
+    </dependencies>
 
 </project>
