v2版本优化协议部分

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>robot</module>
         <module>example</module>
         <module>ai</module>
+        <module>protobuf</module>
     </modules>
 
     <properties>
