--- a/robot/pom.xml
+++ b/robot/pom.xml
@@ -27,12 +27,12 @@
     <dependencies>
         <dependency>
             <groupId>cn.rookiex</groupId>
-            <artifactId>connect</artifactId>
+            <artifactId>ai</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>cn.rookiex</groupId>
-            <artifactId>ai</artifactId>
+            <artifactId>protobuf</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
