--- a/protobuf/pom.xml
+++ b/protobuf/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>protobuf</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.7.0-rc1</version>
+        </dependency>
+    </dependencies>
 </project>
